@@ -46,6 +46,7 @@ public:
     // Methods
     void               clear(void);
     long int           size(void) const;
+    long int           written_size(void) const;
     std::string        classname(void) const;
     bool               is_open(void) const;
     bool               is_empty(void) const;
@@ -57,7 +58,7 @@ public:
     void               cout(const bool& flag);
     void               cerr(const bool& flag);
     void               name(const std::string& name);
-    void               max_size(const int& size);
+    void               buffer_size(const int& size);
     void               indent(const int& indent);
     void               chatter(const GChatter& chatter);
     void               header0(const std::string& arg);
@@ -68,7 +69,7 @@ public:
     const bool&        cout(void) const;
     const bool&        cerr(void) const;
     const std::string& name(void) const;
-    const int&         max_size(void) const;
+    const int&         buffer_size(void) const;
     const int&         indent(void) const;
     const GChatter&    chatter(void) const;
     const GFilename&   filename(void) const;
